<resources>
    <string name="app_name">Money Track</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="icon_password_visible">Password Visible</string>
    <string name="icon_password_hidden">Password Hidden</string>
    <string name="login_failed">Login failed. Check your username or password.</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="unknown_host">Unable to resolve host</string>
    <string name="title_activity_check_credentials">CheckCredentialsActivity</string>
    <string name="new_version">New version is downloading on the background</string>
    <string name="add_expense">New Expense</string>
    <string name="expenses_retrieving_error">Error retrieving expenses</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="no_expenses">No Expenses</string>
    <string name="total">Total %1$s</string>
    <string name="categories_retrieve_error">Error retrieving categories</string>
    <string name="back_to_top">Back to top</string>
    <string name="no_categories">No Categories</string>
    <string name="add_category">New Category</string>
    <string name="category_not_found">Error deleting category. Category not found.</string>
    <string name="category_delete_error">Error deleting category</string>
    <string name="category_name">Category Name</string>
    <string name="category_added">New category created successfully</string>
    <string name="create">Create</string>
    <string name="category_error_empty_name">Category Name cannot be empty</string>
    <string name="category_error_already_exist">Category with same name exists</string>
    <string name="category_create_error">Error creating category</string>
    <string name="delete_category_dialog_title">Delete Category?</string>
    <string name="delete_category_dialog_description">If you delete the category all expenses associated with this category will be deleted also.</string>
    <string name="delete_toast">Category deleted successfully</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="category_updated">Category updated successfully</string>
    <string name="category_update_error">Error updating category</string>
    <string name="expense_not_found">Error deleting expense. Expense not found.</string>
    <string name="expense_delete_error">Error deleting expense</string>
    <string name="expense_create_error">Error creating expense</string>
    <string name="expense_update_error">Error updating expense</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="amount_error_empty">Amount cannot be empty</string>
    <string name="expense_added">New expense created successfully</string>
    <string name="category">Category</string>
    <string name="category_error_not_selected">Please select a category</string>
    <string name="no_income">No Income</string>
    <string name="income_retrieving_error">Error retrieving income</string>
    <string name="income_not_found">Error deleting income. Income not found.</string>
    <string name="income_delete_error">Error deleting income</string>
    <string name="income_create_error">Error creating income</string>
    <string name="income_update_error">Error updating income</string>
    <string name="add_income">New Income</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_expense_dialog_title">Delete expense?</string>
    <string name="delete_expense_dialog_description">If you delete the expense you will not be able to recover it.</string>
    <string name="delete_expense_toast">Expense deleted successfully</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="expense_updated">Expense updated successfully</string>
    <string name="category_search">Search for category</string>
    <string name="comment_search">Search for comment</string>
    <string name="search">Search</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="this_month">This Month</string>
    <string name="previous_month">Previous Month</string>
    <string name="this_year">This Year</string>
    <string name="income_added">New income created successfully</string>
    <string name="delete_income_dialog_title">Delete income?</string>
    <string name="delete_income_dialog_description">If you delete the income you will not be able to recover it</string>
    <string name="delete_income_toast">Income deleted successfully</string>
    <string name="edit_income">Edit Income</string>
    <string name="income_updated">Income updated successfully</string>
    <string name="savings_overview">Savings Overview</string>
    <string name="month_savings">Month</string>
    <string name="year_savings">Year</string>
    <string name="five_biggest_expenses">5 greater expenses</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="total_savings">Total Savings</string>
    <string name="sort_options">Sort Options</string>
    <string name="filter_options">Filter Options</string>
    <string name="next_month">Next Month</string>
</resources>