<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:paddingVertical="4dp"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />


        <TextView
            android:id="@+id/expCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="?colorCategory"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <TextView
            android:id="@+id/expComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/comment"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/expAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense"
        android:textAlignment="viewEnd"
        android:textColor="?colorExpense"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />
</LinearLayout>
